header section mobile and desktop complete. will have to make a tablet version to correct a resize error.

--- a/css/sass/_desktop.scss
+++ b/css/sass/_desktop.scss
@@ -5,34 +5,84 @@
 // top nav
 header{
 	max-width:960px;
+	height: 55px;
 
+	#logo{
+		position: relative;
+		top: -32px;
+		left: 20px;
+		display: inline-block;
+		float: left;
+
+		img{
+			text-align: left;			
+		}
+	}
 	#header_container{
+		width: 100%;
+		height: 55px;
+		-moz-border-bottom-left-radius: 0px;
+		-moz-border-bottom-right-radius:0px;
+							border-bottom-left-radius: 0px;
+							border-bottom-right-radius:0px;
+
 		nav{
 			display: inline-block;
 			// float: left;
-			position: relative;
-			top: 10px;
-			left: 10px;
+			top: 0px;
+			left: 200px;
 			height: 25px;
 
-			ul{
+			li{
+				display: inline-block;
+				float: left;
+				margin: 0 2px 0 0;
+				text-align: left;
+				width: auto;
 
-				li{
-					display: inline-block;
-					float: left;
-					margin: 0 2px 0 0;
+				&#plus{ display: none;	}
+				a{
+					border:none;
 
-					&#plus{ display: none;	}
-					a{
-
-						&.first{
-							width: 120px;
-							-moz-border-bottom-left-radius:0px; 
-												border-bottom-left-radius:0px; 							
-						}
+					&.first{
+						width: 120px;
+						text-align: right;
+						-moz-border-bottom-left-radius:0px; 
+											border-bottom-left-radius:0px; 							
 					}
+					-moz-border-top-left-radius:0px; 
+					-moz-border-top-right-radius:0px;
+										border-top-left-radius:0px; 
+										border-top-right-radius:0px;
 				}
 			}
+		}
+		// shopify
+		#cart{
+			margin-right: 25px;
+			display: inline-block;
+			float: right;
+			top: 0px;
+			text-align: left;
+		}
+		#checkout{
+			width: auto;
+			float: none;
+			border: none;
+			
+			a{
+				-moz-border-top-left-radius:0px; 
+				-moz-border-top-right-radius:0px;
+									border-top-left-radius:0px; 
+									border-top-right-radius:0px;
+			}
+		}
+		&:hover{
+			height: 55px;
+			-moz-border-bottom-left-radius: 0px;
+			-moz-border-bottom-right-radius:0px;
+								border-bottom-left-radius: 0px;
+								border-bottom-right-radius:0px;
 		}
 	}
 }
