--- a/css/sass/style.scss
+++ b/css/sass/style.scss
@@ -12,10 +12,13 @@ $fonts:Helvetica,Arial,sans-serif;
 	padding: 0;
 	-webkit-margin-before:0;
 	-webkit-margin-after:0;
+	box-sizing:border-box;
 }
-header,nav,footer,section
+header,nav,footer,section,p,a,ul,li,img
 {	display:block; }
-
+li{
+	list-style: none;
+}
 // overall
 body{
 	background: $teal url(../img/pkb_poolBlueBK_1920x1280.jpg);
@@ -40,7 +43,7 @@ header{
 	top: 0;
 	width: 100%;
 	max-width:960px;
-	height: 55px;
+	// height: 55px;
 	z-index: 10;
 
 	#cover{
@@ -52,10 +55,30 @@ header{
 		-webkit-box-shadow: 0 0 10px rgba(0,0,0,0.2);
 		box-shadow: 0 0 10px rgba(0,0,0,0.2);
 	}
+	#logo{
+		position: relative;
+		top: -30px;
+		left: 0px;
+		text-align: left;
+		z-index: 50;
+		width: 200px;
+		margin: 0 auto;
+		// display: inline-block;
+		// float: left;
+
+		a{
+			background: none;
+
+			img{
+				// text-align: center;
+				// margin: 0 auto;			
+			}
+		}
+	}
 	#header_container{
 		position: relative;
 		// top: -30px;
-		top: -10px;
+		top: -116px;
 		background: #fff url(../img/pkbSite_headerBKFW.jpg) no-repeat;
 		-moz-border-top-left-radius: 15px;
 		-moz-border-top-right-radius:15px;
@@ -66,84 +89,91 @@ header{
 		box-shadow: 0 0 20px rgba(0,0,0,0.35);
 		z-index: 9;
 		height: 55px;
+		overflow: hidden;
+		-webkit-transition: height 1s ease-in-out;
+		transition: height 500ms ease-in-out;
 
-		#logo{
-			position: relative;
-			top: -20px;
-			left: 20px;
-			z-index: 20;
-			display: inline-block;
-			float: left;
-
-			a{
-				background: none;				
-			}
-		}
 		nav{
 			// display: inline-block;
 			// // float: left;
-			// position: relative;
-			// top: 10px;
-			// left: 10px;
+			position: relative;
+			top: 5px;
+			// left: 45px;
 			// height: 25px;
 			font-weight: bold;
+			z-index: 40;
 
-			ul{
+			li{
+				display: inline-block;
+				float: left;
+				margin: 0 auto;
+				text-align: center;
+				width: 50%;
 
-				li{
-					// display: inline-block;
-					// float: left;
-					// margin: 0 2px 0 0;
+				&#plus{
+					text-align: right;
+					display: block;
+					float: none;
+					width: 120px;
+					position: relative;
+					left: 75px;
+					margin-bottom: 35px;
 
-					&#plus{
-
-						a{
-							-moz-border-top-right-radius:20px; 
-							-moz-border-bottom-right-radius:20px;
-												border-top-right-radius:20px; 
-												border-bottom-right-radius:20px;
-						}
-					}
 					a{
-						background: $brown;
-						color: $lbrown;
-						text-decoration: none;
-						padding: 10px 20px;
-						font-size: 16px;
-						-moz-border-bottom-left-radius:12px; 
-						-moz-border-bottom-right-radius:12px;
-											border-bottom-left-radius:12px; 
-											border-bottom-right-radius:12px;
-					
-						// &.first{
-						// 	width: 120px;
-						// 	-moz-border-bottom-left-radius:0px; 
-						// 						border-bottom-left-radius:0px; 							
-						// }
+						-moz-border-top-right-radius:20px; 
+						-moz-border-bottom-right-radius:20px;
+											border-top-right-radius:20px; 
+											border-bottom-right-radius:20px;
+						-webkit-box-shadow:inset -5px -5px 7px 0 rgba(0,0,0,0.5),inset 5px 5px 7px 0 rgba(255,255,255,0.5);
+															box-shadow:inset -5px -5px 7px 0 rgba(0,0,0,0.5),inset 5px 5px 7px 0 rgba(255,255,255,0.5);
+						display: inline-block;
+						border:none;
+						width: 50%;
+					}
+				}
+				a{
+					background: $brown;
+					color: $lbrown;
+					text-decoration: none;
+					padding: 10px 20px;
+					font-size: 16px;
+					-moz-border-radius: 12px;
+										border-radius: 12px;
+					border:4px solid white;
+				
+					// &.first{
+					// 	width: 120px;
+					// 	-moz-border-bottom-left-radius:0px; 
+					// 						border-bottom-left-radius:0px; 							
+					// }
+					&:hover, &:focus{
+						color: #fff;
+						background: $teal;
+					}
+					&.active{
+						background: $teal;
+						color: $brown;
+
 						&:hover, &:focus{
 							color: #fff;
-							background: $teal;
-						}
-						&.active{
-							background: $teal;
-							color: $brown;
-
-							&:hover, &:focus{
-								color: #fff;
-							}
 						}
 					}
 				}
+			}
+			&:hover{
+
 			}
 		}
 		// shopify
 		#cart{
 			position: relative;
-			margin-right: 25px;
-			display: inline-block;
-			float: right;
+			// margin-right: 25px;
+			// display: inline-block;
+			float: none;
 			font-weight: bold;
 			z-index: 30;
+			text-align: center;
+			top: 25px;
 
 			img{
 				display: inline-block;
@@ -169,20 +199,32 @@ header{
 			// vertical-align: top;
 			position: relative;
 			top: -5px;
+			width: 50%;
+			float: right;
+			border:4px solid white;
 
 			a{
 				background: $brown;
 				color: $lbrown;
 				padding: 10px 20px;
-				-moz-border-bottom-left-radius:12px; 
-				-moz-border-bottom-right-radius:12px;
-									border-bottom-left-radius:12px; 
-									border-bottom-right-radius:12px;
+				-moz-border-radius: 12px;
+				border-radius: 12px;
+				// -moz-border-bottom-left-radius:12px; 
+				// -moz-border-bottom-right-radius:12px;
+				// 					border-bottom-left-radius:12px; 
+				// 					border-bottom-right-radius:12px;
 
 				&:hover,&:focus{
 					color: #fff;
 				}
 			}
+		}
+		&:hover{
+			height: 240px;
+			-moz-border-bottom-left-radius: 15px;
+			-moz-border-bottom-right-radius:15px;
+								border-bottom-left-radius: 15px;
+								border-bottom-right-radius:15px;
 		}
 	}
 	// main
